<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>btree_add</class>
 <widget class="QDialog" name="btree_add">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>261</width>
    <height>202</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QWidget" name="horizontalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>231</width>
     <height>138</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLineEdit" name="editNumber"/>
      </item>
      <item>
       <widget class="QLineEdit" name="editName"/>
      </item>
      <item>
       <widget class="QLineEdit" name="editType"/>
      </item>
      <item>
       <widget class="QLineEdit" name="editOverwork"/>
      </item>
      <item>
       <widget class="QLineEdit" name="editWork"/>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="Name">
        <property name="text">
         <string>Номер</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="Surname">
        <property name="text">
         <string>Имя</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="Patronymic">
        <property name="text">
         <string>Тип</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="IdentNumb">
        <property name="text">
         <string>Время переработки</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="RegistrDate">
        <property name="text">
         <string>Время работы</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QDialogButtonBox" name="buttonBox">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>170</y>
     <width>166</width>
     <height>21</height>
    </rect>
   </property>
   <property name="standardButtons">
    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
